fixed wordmark spacing in footer

--- a/wdn/templates_3.0/css/footer/footer.css
+++ b/wdn/templates_3.0/css/footer/footer.css
@@ -63,7 +63,7 @@ Author: WDN
 }
 #wdn_unl_wordmark {
 	float:right;
-	margin-top:-40px;
+	margin-top:-28px;
 }
 a#wdn_unl_wordmark,
 a#wdn_unl_wordmark:link,
